--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
       <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="image/sliderhome1.avif" class="d-block w-100" alt="...">
+            <img src="sliderhome1.avif" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="image/sliderhome2.avif" class="d-block w-100" alt="...">
+            <img src="sliderhome2.avif" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="image/sliderhome3.avif" class="d-block w-100" alt="...">
+            <img src="sliderhome3.avif" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
